--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.11.0",
+    "@react-native-firebase/firestore": "^21.11.0",
+    "@react-navigation/native": "^7.0.14",
+    "@types/react-native-vector-icons": "^6.4.18",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webrtc": "^124.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
