--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,4 +38,4 @@ newArchEnabled=true
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 android.enableJetifier=true
-# android.enableDexingArtifactTransform.desugaring=false
+android.enableDexingArtifactTransform.desugaring=true
