--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^19.0.0",
     "@types/react-native-webrtc": "^1.75.9",
     "@types/react-test-renderer": "^19.0.0",
+    "@types/webrtc": "^0.0.44",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
