--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^21.11.0",
-    "@react-native-firebase/firestore": "^21.11.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/auth": "^21.12.0",
+    "@react-native-firebase/firestore": "^21.12.0",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.0.18",
     "@types/react-native-vector-icons": "^6.4.18",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-incall-manager": "^4.2.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.0.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-stack": "^1.0.0-alpha11",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webrtc": "^124.0.5"
+    "react-native-webrtc": "^124.0.5",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
