--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.0.0",
     "react-native-sound": "^0.11.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webrtc": "^124.0.5",
@@ -44,6 +45,7 @@
     "@react-native/typescript-config": "0.78.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-webrtc": "^1.75.9",
     "@types/react-test-renderer": "^19.0.0",
     "@types/webrtc": "^0.0.44",
