--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-firebase/app": "^21.12.0",
-    "@react-native-firebase/auth": "^21.12.0",
-    "@react-native-firebase/firestore": "^21.12.0",
+    "@react-native-firebase/app": "^21.12.3",
+    "@react-native-firebase/auth": "^21.12.3",
+    "@react-native-firebase/firestore": "^21.12.3",
+    "@react-native-firebase/messaging": "^21.12.3",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
